# polars-luxical

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  deploy.yml  test-platform.yml
.just/ci/: versions.just
benchmark/: doc_half_match_demo.py
src/: embedder.rs  expressions.rs  lib.rs  ngrams.rs  registry.rs  tfidf.rs
